changed adam to SGD

--- a/TheSimpleModel_GRU_final.ipynb
+++ b/TheSimpleModel_GRU_final.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "66aff363-68a9-48b4-ac84-dd5e2d7e6de2",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
     "\n",
     "vocab_size = len(vocab)\n",
     "model = NeuralLM(vocab_size)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.005)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "print(\"complete\")"
    ]
